# last-resort

./: .travis.yml  Makefile  README.md  last-resort.cabal  stack.yaml
api/: last-resort.cabal  stack.yaml
api/app/api/: Main.hs
api/src/LastResort/: Api.hs  Config.hs  Environment.hs  Logger.hs  Prelude.hs
api/src/LastResort/Prelude/: Orphan.hs  Util.hs
api/test/: DocTest.hs  Spec.hs
app/api/: Main.hs
frontend/: .gitignore  Makefile  bower.json  package.json  webpack.config.js
frontend/src/: Client.purs  LastResort.purs
frontend/src/App/: Config.js  Events.purs  Routes.purs  State.purs
frontend/src/App/View/: Homepage.purs  Layout.purs  SearchResults.purs
frontend/src/LastResort/: Config.purs  Events.purs  Prelude.purs  Routes.purs  State.purs
frontend/src/LastResort/View/: Homepage.purs  Layout.purs  NotFound.purs  SearchResults.purs
frontend/static/: index.html
frontend/support/: entry.js
src/: Twitter.hs
src/LastResort/: Api.hs  Config.hs
